fix text wrapping error in latest news and latest deals sections in the mobile version

--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ Typography
 .roboto-custom_font {
   font-family: 'Roboto', sans-serif;
   font-weight: 900;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
 }
 
 .gray-font {
@@ -86,7 +86,7 @@ Typography
 }
 
 .latest-news h4 {
-  font-size: 1.1rem;
+  font-size: 0.8rem;
 }
 
 .see-all__font {
